fixed issues with cascading styling between hero-wrap page specific versions

--- a/app/assets/stylesheets/redesign/components/_hero.scss
+++ b/app/assets/stylesheets/redesign/components/_hero.scss
@@ -10,6 +10,10 @@
     min-height: 100px;
   }
 
+  .heading {
+    margin: 0;
+  }
+
   // versions
   &.copy-right, &.copy-left {
     margin-bottom: 50px;
@@ -27,7 +31,6 @@
     }
 
     .heading {
-      margin: 50px 0 0;
       text-transform: none;
       color: $c-neutral-black;
 
@@ -146,8 +149,13 @@
 
   @media (max-width: $bootstrap-md-width - 1px) {
 
-    .heading > span:first-child {
-      font-size: 3.8rem;
+    .heading {
+      margin-top: 50px;
+
+      > span:first-child {
+        font-size: 3.8rem;
+      }
+
     }
 
   }
