--- a/app/assets/stylesheets/redesign/pages/_homepage.scss
+++ b/app/assets/stylesheets/redesign/pages/_homepage.scss
@@ -131,10 +131,6 @@
         min-height: 430px;
       }
 
-      .heading {
-        margin-top: 0;
-      }
-
     }
 
     .btn-featured {
